# tinker

./: .gitrepo  .ruff.toml  .stats.yml  .sync_state  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pydoc-markdown.yml  pyproject.toml  test_fixes.py  validate_issue_55.py
.github/workflows/: ci.yml
docs/: README.md
docs/api/: _meta.json  apifuture.md  exceptions.md  restclient.md  samplingclient.md  serviceclient.md  trainingclient.md  types.md
scripts/: generate_docs.py  lint  mock  publish-pypi  test
scripts/utils/: upload-artifact.sh
src/tinker/: __init__.py  _base_client.py  _client.py  _compat.py  _constants.py  _exceptions.py  _files.py  _models.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py
src/tinker/_utils/: __init__.py  _logs.py  _reflection.py  _resources_proxy.py  _sync.py  _transform.py  _typing.py  _utils.py
src/tinker/cli/: CLAUDE.md  __main__.py  client.py  context.py  exceptions.py  lazy_group.py  output.py
src/tinker/lib/: _grpc_auth_interceptor.py  _jwt_auth.py  _jwt_auth_test.py  _pydantic_conv.py  api_future_impl.py  async_tinker_provider.py  chunked_fwdbwd_helpers.py  client_connection_pool_type.py  internal_client_holder.py  internal_client_holder_test.py  public_interfaces.py  queue_state_logger.py  retry_handler.py  retryable_exception.py  service_client_test.py  sync_only.py  telemetry.py  telemetry_provider.py  telemetry_test.py
src/tinker/proto/: request_conv.py  response_conv.py  tinker_api_pb2.py  tinker_api_pb2.pyi  tinker_api_pb2_grpc.py  tinker_public_pb2.py  tinker_public_pb2.pyi
src/tinker/resources/: __init__.py  futures.py  models.py  sampling.py  service.py  telemetry.py  training.py  weights.py
src/tinker/types/: __init__.py  audit_log_entry.py  audit_log_response.py  checkpoint.py  checkpoint_archive_url_response.py  checkpoints_list_response.py  client_config_response.py  create_model_request.py  create_model_response.py  create_sampling_session_request.py  create_sampling_session_response.py  create_session_request.py  create_session_response.py  cursor.py  datum.py  datum_param.py  encoded_text_chunk.py  encoded_text_chunk_param.py  error_response.py  event_type.py  forward_backward_input.py  forward_backward_input_param.py  forward_backward_output.py  forward_backward_request.py  forward_request.py  future_retrieve_params.py  future_retrieve_request.py  future_retrieve_response.py  generic_event.py  generic_event_param.py  get_info_request.py  get_info_response.py  get_sampler_response.py  (+72 more)
src/tinker_public/: __init__.py  _base_client.py  _client.py  _constants.py  _models.py  _response.py  _types.py  _version.py
tests/: conftest.py  mock_api_server.py  test_checkpoint_archive_url.py  test_checkpoint_delete.py  test_chunked_fwdbwd_helpers.py  test_cli_output.py  test_client.py  test_deepcopy.py  test_extract_files.py  test_files.py  test_list_training_runs.py  test_model_input_repr.py  test_models.py  test_proto_request_conv.py  test_proto_response_conv.py  test_pydantic_conv.py  test_qs.py  test_required_args.py  test_response.py  test_sampler_weights_loading.py  test_sampling_client_compute_logprobs.py  test_service_client.py  test_streaming.py  test_tensor_data.py  test_training_client_custom_loss.py  test_transform.py  utils.py
tests/api_resources/: test_futures.py  test_models.py  test_sampling.py  test_service.py  test_telemetry.py  test_training.py  test_weights.py
tests/test_utils/: test_proxy.py  test_typing.py
(+61 files in other folders)
